//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Owner {
  ownerId String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  accounts Account [not null]
}

Table Account {
  accountId String [pk]
  acctType String [not null]
  balance Float [not null]
  transactions Transaction [not null]
  owner Owner [not null]
  ownerId String [not null]
}

Table Transaction {
  transId Int [pk, increment]
  transType String [not null]
  amount Float [not null]
  date DateTime [default: `now()`, not null]
  account Account [not null]
  accountId String [not null]
}

Ref: Account.ownerId > Owner.ownerId

Ref: Transaction.accountId > Account.accountId [delete: Cascade]